code coverage report and dockerhub

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ backend/obj/
 # **/TenantConstant.cs
 **/appsettings.Development.json
 # **/appsettings.json
-backend/Shared/Authorization/TenantConstants.cs
+# backend/Shared/Authorization/TenantConstants.cs
 # backend/Api/Migrations/PGSql/Experties
 # backend/Api/Migrations/PGSql/Job
 # backend/Api/Migrations/PGSql/Tenannt
